--- a/ServiceStaff/style.css
+++ b/ServiceStaff/style.css
@@ -237,6 +237,18 @@ td
   border-radius: 32px;
 }
 
+.button:hover {
+	background-color: gray;
+}
+
+.button1:hover {
+	background-color: #gray;
+}
+
+.button2:hover {
+	background-color: #gray;
+}
+
 .button1 {
   background-color: rgb (255, 255, 255 );
   border: none;
