--- a/Inventory/style.css
+++ b/Inventory/style.css
@@ -296,7 +296,7 @@
         opacity: 0.3;
     }
     
-    .container:hover .middle {
+    .container .middle {
         opacity: 1;
     }
     
@@ -304,7 +304,7 @@
         opacity: 0.3;
     }
     
-    .container2:hover .middle {
+    .container2 .middle {
         opacity: 1;
     }
     
@@ -312,7 +312,7 @@
         opacity: 0.3;
     }
     
-    .container3:hover .middle {
+    .container3 .middle {
         opacity: 1;
     }
     
@@ -320,7 +320,7 @@
         opacity: 0.3;
     }
     
-    .container4:hover .middle {
+    .container4 .middle {
         opacity: 1;
     }
     
@@ -328,7 +328,7 @@
         opacity: 0.3;
     }
     
-    .container5:hover .middle {
+    .container5 .middle {
         opacity: 1;
     }
     
@@ -336,15 +336,23 @@
         opacity: 0.3;
     }
     
-    .container6:hover .middle {
+    .container6 .middle {
         opacity: 1;
     }
     
     .text {
-        background-color: rgb(83, 83, 83);
+        background-color: rgba(0, 0, 0, 0.452);
         color: white;
         font-size: 16px;
         padding: 16px 32px;
+        text-shadow: 2px 2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    }
+    
+    @supports (-webkit-text-stroke: 1px black) {
+        text {
+            -webkit-text-stroke: 1px black;
+            -webkit-text-fill-color: white;
+        }
     }
     
     @media screen and (min-width:1366px) {
