--- a/Management/style3.css
+++ b/Management/style3.css
@@ -89,13 +89,13 @@ h1{
 	color:#FF7034;
 }
 
-/* Add a black background color to the top navigation */
+
 .topnav {
 	background-color: #333;
 	overflow: hidden;
   }
   
-  /* Style the links inside the navigation bar */
+ 
   .topnav a {
 	float: left;
 	color: #f2f2f2;
@@ -105,26 +105,26 @@ h1{
 	font-size: 17px;
   }
   
-  /* Change the color of links on hover */
+  
   .topnav a:hover {
 	background-color: #ddd;
 	color: black;
   }
   
-  /* Add a color to the active/current link */
+  
   .topnav a.active {
 	background-color: #FF4500;
 	color: white;
   }
 
-  /* Navbar container */
+ 
 .navbar {
   overflow: hidden;
   background-color: #333;
   font-family: Arial;
 }
 
-/* Links inside the navbar */
+
 .navbar a {
   float: left;
   font-size: 16px;
@@ -134,13 +134,13 @@ h1{
   text-decoration: none;
 }
 
-/* The dropdown container */
+
 .dropdown {
   float: left;
   overflow: hidden;
 }
 
-/* Dropdown button */
+
 .dropdown .dropbtn {
   font-size: 16px;
   border: none;
@@ -148,16 +148,16 @@ h1{
   color: white;
   padding: 14px 16px;
   background-color: inherit;
-  font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
+  font-family: inherit; 
+  margin: 0; 
 }
 
-/* Add a red background color to navbar links on hover */
+
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: red;
 }
 
-/* Dropdown content (hidden by default) */
+
 .dropdown-content {
   display: none;
   position: absolute;
@@ -167,7 +167,7 @@ h1{
   z-index: 1;
 }
 
-/* Links inside the dropdown */
+
 .dropdown-content a {
   float: none;
   color: black;
@@ -177,12 +177,12 @@ h1{
   text-align: left;
 }
 
-/* Add a grey background color to dropdown links on hover */
+
 .dropdown-content a:hover {
   background-color: #ddd;
 }
 
-/* Show the dropdown menu on hover */
+
 .dropdown:hover .dropdown-content {
   display: block;
 }
@@ -191,14 +191,14 @@ h1{
 
 
 
-/* Navbar container */
+
 .navbar {
 	overflow: hidden;
 	background-color: #333;
 	font-family: Arial;
   }
   
-  /* Links inside the navbar */
+ 
   .navbar a {
 	float: left;
 	font-size: 16px;
@@ -216,13 +216,13 @@ h1{
 	transform: translate(-50%, -50%);
   }
   
-  /* The dropdown container */
+
   .dropdown {
 	float: left;
 	overflow: hidden;
   }
   
-  /* Dropdown button */
+  
   .dropdown .dropbtn {
 	font-size: 16px;
 	border: none;
@@ -230,16 +230,16 @@ h1{
 	color: white;
 	padding: 14px 16px;
 	background-color: inherit;
-	font-family: inherit; /* Important for vertical align on mobile phones */
-	margin: 0; /* Important for vertical align on mobile phones */
+	font-family: inherit; 
+	margin: 0; 
   }
   
-  /* Add a red background color to navbar links on hover */
+  
   .navbar a:hover, .dropdown:hover .dropbtn {
 	background-color: orange;
   }
   
-  /* Dropdown content (hidden by default) */
+  
   .dropdown-content {
 	display: none;
 	position: absolute;
@@ -249,7 +249,7 @@ h1{
 	z-index: 1;
   }
   
-  /* Links inside the dropdown */
+
   .dropdown-content a {
 	float: none;
 	color: black;
@@ -259,12 +259,12 @@ h1{
 	text-align: left;
   }
   
-  /* Add a grey background color to dropdown links on hover */
+  
   .dropdown-content a:hover {
 	background-color: #ddd;
   }
   
-  /* Show the dropdown menu on hover */
+  
   .dropdown:hover .dropdown-content {
 	display: block;
   }
@@ -272,7 +272,7 @@ h1{
 
 
 
-  /* Style the header: fixed position (always stay at the top) */
+  
 .header {
 	position: fixed;
 	top: 0;
@@ -281,14 +281,14 @@ h1{
 	background-color: #f1f1f1;
   }
   
-  /* The progress container (grey background) */
+  
   .progress-container {
 	width: 100%;
 	height: 8px;
 	background: #ccc;
   }
   
-  /* The progress bar (scroll indicator) */
+ 
   .progress-bar {
 	height: 8px;
 	background: #4caf50;
@@ -300,7 +300,6 @@ h1{
 
 
 
-  /* Three columns side by side */
 .column {
 	float: left;
 	width: 33.3%;
@@ -308,7 +307,7 @@ h1{
 	padding: 0 8px;
   }
   
-  /* Display the columns below each other instead of side by side on small screens */
+
   @media screen and (max-width: 650px) {
 	.column {
 	  width: 100%;
@@ -316,17 +315,17 @@ h1{
 	}
   }
   
-  /* Add some shadows to create a card effect */
+ 
   .card {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   }
   
-  /* Some left and right padding inside the container */
+ 
   .container {
 	padding: 0 16px;
   }
   
-  /* Clear floats */
+ 
   .container::after, .row::after {
 	content: "";
 	clear: both;
